@@ -52,6 +52,7 @@
                 CLOSE: "{% trans 'Close' %}",
                 EDIT_PAGE: "{% trans 'Edit \'{title}\'' %}",
                 VIEW_CHILD_PAGES_OF_PAGE: "{% trans 'View child pages of \'{title}\'' %}",
+                PAGE_EXPLORER: "{% trans 'Page explorer' %}",
 
                 MONTHS: [
                     "{% trans 'January' %}",
